# fp-Sose26-Notes

./: .gitignore  .gitmodules  .nojekyll  _quarto.yml  index.html  intro.html  mathjax-macros.html  notes.qmd  preamble.tex  project_overview.html  project_overview.qmd  project_setup.html  project_setup.qmd  references.html  report.html  report.qmd  search.json  summary.html
code/: CMakeLists.txt  CMakePresets.json
code/examples/: CMakeLists.txt  ex_conversions.cc  hdnum_sandbox.cc
code/examples/conversions/: CMakeLists.txt  ex_constructible.cc  ex_conversions.cc  ex_numeric_limits.cc  ex_scalar_cast.cc
code/examples/lu_decomposition/: ex_lu.cc
code/examples/mixed_ir/: ex_mixed_ir_compile.cc  ex_norm.cc  ex_unit_roundoff.cc
code/examples/test_matrix/: ex_temp_test_matrix.cc
code/experiments/: CMakeLists.txt  exp_convergence.cc  exp_convergence_random_spd.cc  exp_convergence_random_svd.cc
code/include/: error_metrics.hpp  hdnum_conversions.hpp  mixed_ir.hpp  reference_solve.hpp  test_matrices.hpp  testmatrix.hh  unit_roundoff.hpp
code/scripts/: plot_convergence.py
code/tests/: CMakeLists.txt  test_conversion.cc  test_unit_roundoff.cc
notes/: conversions.html  conversions.qmd  experiments.html  experiments.qmd  mixed_ir.html  mixed_ir.qmd  project_overview.html  project_overview.qmd  project_setup.html  project_setup.qmd
notes/resources/: conversions_triangle.tldr
site_libs/bootstrap/: bootstrap-251915186e5ac48a2a36efd978de2bb8.min.css
